# mcsnew

./: .gitignore  AGENTS.md  clean_file_names.py  cumulative.py  main.py  pyproject.toml  savings_presentation.py  static_charts.py  visualizations.py
archive/outputback/: savings_summary.txt
cap_rates/: SFY_2024_Dec23_North_Carolina_Standard_Plan_Rate_Book_Exhibits_68_122_20231115.xlsx  SFY_2024_Jan24-Jun24_Standard_Plan_Rate_Book_Exhibits_12.19.2023.xlsx  SFY_2024_Jul23-Nov23_Standard_Plan_Rate_Book_Exhibits_37_67_20231115.xlsx  SFY_2025_Standard_Plan_Rate_Exhibits_w_PCs_2024.06.10.xlsx  SFY_2026_Standard_Plan_Rate_Exhibits_w_PCs_2025.06.04.xlsx
output/: contribution_summary.txt  savings_summary.txt
src/: __init__.py  analysis.py  db.py  extract.py  load.py  models.py  normalize.py  visualize.py
