[project]
name = "rates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.3",
    "millify>=0.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "seaborn>=0.13.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-orm>=1.2.10",
]
